--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@
 			<dl>
 				<div>
 					<dt><samp>x-0-0</samp>
-					<dd>The number of <strong>ID selectors</strong>
+					<dd>The number of <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/ID_selectors target=_blank>ID selectors</a>
 				</div>
 				<div>
 					<dt><samp>0-x-0</samp>
-					<dd>The number of <strong>class and attribute</strong>, and <strong>pseudo-selectors</strong>
+					<dd>The number of <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Class_selectors target=_blank>class</a>, <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors target=_blank>attribute</a>, and <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-classes target=_blank>pseudo-classes</a>
 				</div>
 				<div>
 					<dt><samp>0-0-x</samp>
-					<dd>The number of <strong>type</strong> and <strong>pseudo-elements</strong>
+					<dd>The number of <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Type_selectors target=_blank>type</a> and <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements target=_blank>pseudo-elements</a>
 				</div>
 				<div>
 					<dt><samp>*</samp> <samp>+</samp> <samp>&gt;</samp> <samp>~</samp>
-					<dd>The <strong>universal selector</strong> has no value. When combined with other selectors, they do not increase specificity.
+					<dd>The <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Universal_selectors target=_blank>universal selector</a> has no value. When combined with other selectors, they do not increase specificity.
 				</div>
 				<div>
 					<dt><samp>:not(x)</samp>
-					<dd>The <strong>negation selector</strong> has no value, but the argument passed increases specificity
+					<dd>The <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/:not target=_blank>negation selector</a> has no value, but the argument passed increases specificity
 				</div>
 			</ul>
 		</section>
