--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
 			<dl>
 				<div>
 					<dt><samp>x-0-0</samp>
-					<dd>The number of <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/ID_selectors target=_blank>ID selectors</a>
+					<dd>The number of <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/ID_selectors target=_blank>ID selectors</a>.
 				</div>
 				<div>
 					<dt><samp>0-x-0</samp>
-					<dd>The number of <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Class_selectors target=_blank>class</a>, <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors target=_blank>attribute</a>, and <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-classes target=_blank>pseudo-classes</a>
+					<dd>The number of <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Class_selectors target=_blank>class</a>, <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors target=_blank>attribute</a>, and <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-classes target=_blank>pseudo-classes</a>.
 				</div>
 				<div>
 					<dt><samp>0-0-x</samp>
-					<dd>The number of <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Type_selectors target=_blank>type</a> and <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements target=_blank>pseudo-elements</a>
+					<dd>The number of <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Type_selectors target=_blank>type</a> and <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements target=_blank>pseudo-elements</a>.
 				</div>
 				<div>
 					<dt><samp>*</samp> <samp>+</samp> <samp>&gt;</samp> <samp>~</samp>
@@ -74,7 +74,7 @@
 				</div>
 				<div>
 					<dt><samp>:not(x)</samp>
-					<dd>The <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/:not target=_blank>negation selector</a> has no value, but the argument passed increases specificity
+					<dd>The <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/:not target=_blank>negation selector</a> has no value, but the argument passed increases specificity.
 				</div>
 			</ul>
 		</section>
