Cleanup and justification.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 	header img { justify-content: end; flex: 0 1; }
 	header p { justify-content: end; flex: 0 1; padding: 1em; min-width: fit-content; }
 	
-	#selectors { display: flex; justify-content: center; }
+	#selectors { display: flex; align-items: center; flex-wrap: wrap; justify-content: center; }
 	#selectors figure { flex 0 0; }
 	
-	figure { width: 25%; position: relative; margin: 15px 15px calc(15px + 1em); padding: 0; box-sizing: border-box; }
+	figure { width: 25%; position: relative; margin: 15px 15px calc(15px + 1em); padding: 0; }
 	figure img { border: 1px solid black; }
 	figure figcaption { position: absolute; left: -4px; top: -4px; padding: 5px; background: black; color: white; font-size: 12px; font-weight: bold; box-shadow: -1px -1px 0 white, -2px -2px 0 black; line-height: 1; }
 	figure samp { font-size: 11px; float: left; }
