--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
 	<footer>
 		<section id=about>
 			<h3>About</h3>
-			<p>The origin and sorting order of CSS helps browsers to determine which rules win out over others.
-			<p>When one of those methods completely fails, there is a conflict as to which CSS rule should be applied. CSS has in place a way to deal with those conflicts: the specificity of the CSS selector.
-			<p>The higher the specificity of a CSS selector, the greater the likelihood its declarations are used over another CSS rule's declarations.
+			<p>The origin and sorting order of CSS helps browsers to determine which rules win out over others. When one of those methods completely fails, there is a conflict as to which CSS rule should be applied.
+				<p>CSS has in place a way to deal with those conflicts: the specificity of the CSS selector. The higher the specificity of a CSS selector, the greater the likelihood its declarations are used over another CSS rule's declarations.
 		</section>
 		<section id=legend>
 			<h3>Legend</h3>
