--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	#selectors { display: flex; align-items: center; flex-wrap: wrap; justify-content: center; }
 	#selectors figure { flex 0 0; }
 	
-	figure { width: 19vw; position: relative; margin: 0 2vw calc(15px + 1em); padding: 0; }
+	figure { width: 19vw; min-width: 150px; position: relative; margin: 0 2vw calc(15px + 1em); padding: 0; }
 	figure img { border: 1px solid black; }
 	figure figcaption { position: absolute; left: -4px; top: -4px; padding: 5px; background: black; color: white; font-size: 12px; font-weight: bold; box-shadow: -1px -1px 0 white, -2px -2px 0 black; line-height: 1; }
 	figure samp { font-size: 11px; float: left; }
