Footer section heading alignment.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	h1:first-line { font-size: 40px; }
 	h1 a { text-decoration: none; color: #333; }
 	h1 a:hover, h1 a:focus { color: black; }
-	h3 { display: inline-block; font-size: 11px; margin: 0 calc(-1ex + 2px); background-color: #cbc9c7; padding: 3px 5px; box-shadow: -1px -1px 0 white, -2px -2px 0 #d0cecd; }
+	h3 { display: inline-block; font-size: 11px; background-color: #cbc9c7; margin: 0; padding: 3px 5px; box-shadow: -1px -1px 0 white, -2px -2px 0 #d0cecd; }
 	
 	header { display: flex; align-items: center; justify-content: center; }
 	header > * { flex: 1; }
@@ -24,6 +24,7 @@
 	
 	#selectors { display: flex; align-items: center; flex-wrap: wrap; justify-content: center; }
 	#selectors figure { flex 0 0; }
+	#selectors h3 { display: inline-block; font-size: 11px; margin: 0 calc(-1ex + 2px); background-color: #cbc9c7; padding: 3px 5px; box-shadow: -1px -1px 0 white, -2px -2px 0 #d0cecd; }
 	
 	figure { width: 19vw; min-width: 150px; position: relative; margin: 0 2vw calc(15px + 1em); padding: 0; }
 	figure img { border: 1px solid black; }
@@ -40,9 +41,11 @@
 	footer + footer { color: #cbc9c7; }
 	footer dl { margin: 0; margin-top: 1em; padding: 0; }
 	footer dl div { display: flex; }
-	footer dt { flex: 0 1; min-width: 6em; text-align: right; }
+	footer dt { flex: 0 1; min-width: 90px; max-width: 90px; text-align: right; }
 	footer dt samp { font-family: monospace; display: inline-block; border: 1px solid rgba(127, 127, 127, 0.5); border-radius: 3px; padding: 0.5ex 1ex; margin-bottom: 1ex; }
-	footer dd { flex: 1 0; margin: 0; margin-left: 1em; line-height: 1.4; padding-top: 3px; }
+	footer dd { flex: 1 0; margin: 0; margin-left: 10px; line-height: 1.4; padding-top: 3px; }
+	
+	#legend h3 { margin-left: 100px; }
 	
 	#colophon { text-align: center; }
 	#colophon ul { list-style: none; }
