--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <style>
 	html, body { font-family: Helvetica, sans-serif; margin: 0; padding: 0; }
 	article { }
+	a { font-weight: bold; color: inherit; text-decoration: none; }
+	a:hover, footer a:focus { color: black; text-decoration: underline; }
 	
 	h1 { margin: 10px 0 20px 5px; font-weight: bold; font-size: 48px; line-height: 0.7; text-indent: 30px; }
 	h1:first-line { font-size: 40px; }
-	h1 a { text-decoration: none; color: #333; }
+	h1 a { color: #333; }
 	h1 a:hover, h1 a:focus { color: black; }
 	h3 { display: inline-block; font-size: 11px; background-color: #cbc9c7; margin: 0; padding: 3px 5px; box-shadow: -1px -1px 0 white, -2px -2px 0 #d0cecd; }
 	
@@ -26,18 +28,16 @@
 	#selectors figure { flex 0 0; }
 	#selectors h3 { display: inline-block; font-size: 11px; margin: 0 calc(-1ex + 2px); background-color: #cbc9c7; padding: 3px 5px; box-shadow: -1px -1px 0 white, -2px -2px 0 #d0cecd; }
 	
-	figure { width: 19vw; min-width: 150px; position: relative; margin: 0 2vw calc(15px + 1em); padding: 0; }
+	figure { width: 19vw; min-width: 150px; max-width: 200px; position: relative; margin: 0 2vw calc(15px + 1em); padding: 0; }
 	figure img { border: 1px solid black; }
 	figure figcaption { position: absolute; left: -4px; top: -4px; padding: 5px; background: black; color: white; font-size: 12px; font-weight: bold; box-shadow: -1px -1px 0 white, -2px -2px 0 black; line-height: 1; }
 	figure samp { font-size: 11px; float: left; }
 	figure samp + samp { float: right; }
 	
 	footer { font-size: 10px; }
-	footer > section { max-width: 50%; padding: 0 1em; }
-	footer > section:first-child { padding-left: 1em; }
+	footer section { width: 50%; padding: 0 1em; }
+	footer section:first-child { padding-left: 1em; }
 	footer:first-of-type { display: flex; justify-content: center; }
-	footer a { font-weight: bold; color: inherit; text-decoration: none; }
-	footer a:hover, footer a:focus { color: black; text-decoration: underline; }
 	footer + footer { color: #cbc9c7; }
 	footer dl { margin: 0; margin-top: 1em; padding: 0; }
 	footer dl div { display: flex; }
@@ -51,11 +51,11 @@
 		display: flex;
 		justify-content: center;
 		max-height: 30px;
-		margin: 0 0 10px;
+		margin: 0 0 -8px;
 	}
 	
 	hr::after {
-		filter: invert(50%);
+		opacity: 0.125;
 		content: url("data:image/svg+xml,%3Csvg width='1200' height='30' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' stroke-width='2' stroke='%23000'%3E%3Cpath d='M0 9.49h400l79.59-.08 17.19-.49 18.26-.47 8.1.05 6.65.3 5.95.53 5.67.77 5.66 1.03 6.15 1.4 8.8 2.3 7.8 1.97 4.4.83 3.51.41 3.03.1 2.74-.16 2.54-.4 2.44-.66 2.44-.94 2.34-1.2 2.44-1.59 2.54-2.03 6.94-5.97 2.53-1.5 2.45-1.12 2.44-.81 2.54-.55 2.63-.3 2.84-.04 3.12.22 3.61.54 4.4.93 6.64 1.7 11.03 2.85 6.06 1.26 5.66.9 5.67.66 6.05.42 6.74.2 8.2-.03 12.5-.35 23.34-.64 16.7-.15 26.66.05 33.01.08h400'/%3E%3Cpath d='M0 9.51h400l79.59.08 17.19.49 18.26.47 8.1-.05 6.65-.3 5.95-.53 5.67-.77 5.66-1.03 6.15-1.4 8.8-2.3 7.8-1.97 4.4-.83 3.51-.41 3.03-.1 2.74.16 2.54.4 2.44.66 2.44.94 2.34 1.2 2.44 1.59 2.54 2.03 6.94 5.97 2.53 1.5 2.45 1.12 2.44.81 2.54.55 2.63.3 2.84.04 3.12-.22 3.61-.54 4.4-.93 6.64-1.7 11.03-2.85 6.06-1.26 5.66-.9 5.67-.66 6.05-.42 6.74-.2 8.2.03 12.5.35 23.34.64 16.7.15L767 9.57 800 9.49h400'/%3E%3Cpath d='M0 9.5h400l62.2.04 23.05.38 17.39.21 9.47-.15 7.91-.38 7.32-.61 7.43-.9 9.27-1.39L555.57 5l5.07-.49 4.1-.13 3.62.14 3.22.38 3.03.6 2.93.87 2.83 1.1 2.83 1.4 2.93 1.79 3.03 2.2 3.13 2.66 3.22 3.14 3.42 3.73 1.27 1.3 2.05.32 2.14.07 2.35-.18 2.54-.47 2.93-.82 3.61-1.3 4.98-2.13 12.8-5.6 4.97-1.79 4.6-1.36 4.39-1.02 4.5-.77 4.68-.54 5.08-.3 5.76-.1 7.13.17 11.13.56 18.07.88 12.3.32 14.45.1 27.74-.16 36.91-.1H1200'/%3E%3Cpath d='M0 9.47h400l43.75.11 35.84.1 13.18-.26 12.4-.5 26.57-1.21 6.25.08 5.27.31 4.79.55 4.49.78 4.4 1.03 4.49 1.33 4.68 1.68 5.47 2.27 15.33 6.58 3.32.99 2.74.55 2.44.22 2.25-.06 2.05-.31.39-.18 3.61-4.05 3.32-3.33 3.13-2.74 3.12-2.36 3.13-1.95 3.02-1.54 2.93-1.16 2.93-.87 3.03-.62 3.22-.38 3.52-.15 3.9.11 4.6.4 6.05.81 21.87 3.16 7.33.66 7.52.4 8.5.2 10.74-.04 60.64-.65 33.79.06h400'/%3E%3Cpath d='M0 9.48h400l49.02.06 48.05.23 10.06-.33 9.47-.58 11.13-.96 14.07-1.2 5.95-.23 4.79.07 4.2.32 3.9.56 3.62.78 3.51 1.02 3.52 1.32 3.61 1.65 3.71 2.02 4.1 2.59 4.89 3.46 12.5 9.17 4.2-3 14.06-10.34 4.2-2.55 3.8-1.97 3.62-1.54 3.61-1.24 3.62-.94 3.7-.69 3.91-.45 4.3-.22 4.79.02 5.86.3 8.59.72 17.38 1.5 9.47.51 9.97.27 12.1.06 22.56-.23 28.62-.18 31.54.02h400'/%3E%3C/g%3E%3C/svg%3E");
 	}
 	
@@ -71,7 +71,7 @@
 <article>
 	<header>
 		<h1><a href="/">CSS<br>Specificity</a></h1>
-		<p>with icons inspired<br>by "The Shining"</p>
+		<p>with icons inspired<br>by <a href=https://www.imdb.com/title/tt0081505/ target=_blank>"The Shining"</a></p>
 		<img src=img/typewriter.svg height=100>
 	</header>
 	
@@ -103,6 +103,34 @@
 			<samp>body … section p</samp>
 			<samp>0–0–9</samp>
 		</figure>
+		
+		<figure>
+			<img src=img/class-single.svg alt="9 elements">
+			<figcaption>1 class</figcaption>
+			<samp>.missing-key</samp>
+			<samp>0–1–0</samp>
+		</figure>
+		
+		<figure>
+			<img src=img/universal-class.svg alt="1 universal selector, 1 class">
+			<figcaption class=multiline>1 universal selector<br>1 class</figcaption>
+			<samp>*.missing-key</samp>
+			<samp>0–1–0</samp>
+		</figure>
+		
+		<figure>
+			<img src=img/universal-attribute.svg alt="1 universal selector, 1 attribute selector">
+			<figcaption class=multiline>1 universal selector<br>1 attribute selector</figcaption>
+			<samp>*[type:checkbox]</samp>
+			<samp>0–1–0</samp>
+		</figure>
+		
+		<figure>
+			<img src=img/pseudo-class.svg alt="9 elements">
+			<figcaption>1 pseudo-class</figcaption>
+			<samp>:only-of-type</samp>
+			<samp>0–1–0</samp>
+		</figure>
 	</section>
 	
 	<hr>
@@ -113,7 +141,7 @@
 			<p>The origin and sorting order of CSS helps browsers to determine which rules win out over others. When one of those methods completely fails, there is a conflict as to which CSS rule should be applied.
 			<p>CSS has in place a way to deal with those conflicts: the specificity of the CSS selector. The higher the specificity of a CSS selector, the greater the likelihood its declarations are used over another CSS rule's declarations.
 			<br>
-			<p>This reference was formerly hosted at <a href="https://cssspecificity.com/">cssspecificty.com</a>, however it went offline long ago. This was Alice's favourite reference for this, so she's restored the content and made it available under <a href="https://specificity.webcore.io">specificity.webcore.io</a>.
+			<p>This reference was formerly hosted at <a href="https://cssspecificity.com/">cssspecificty.com</a>, which went offline long ago. This was Alice's favourite reference for this, so she's restored the content, modernized it according to her taste in HTML, and made it available under <a href="https://specificity.webcore.io">specificity.webcore.io</a>. Links to relevant <a href=https://developer.mozilla.org target=_blank>Mozilla Developer Network</a> pages have also been added.
 		</section>
 		<section id=legend>
 			<h3>Legend</h3>
@@ -156,63 +184,6 @@
 
 <article hidden>
 		<div class="container">
-			<div class="box">
-				<div class="frame">
-					<a href="#">
-						<div class="img">
-							<img src="/web/20220318101613im_/https://cssspecificity.com/images/img-03.svg" alt="">
-							<div class="ttl">
-								<ul>
-									<li>1 element</li>
-								</ul>
-							</div>
-							<div class="mask"></div>
-						</div>
-						<div class="desc">
-							<span class="value">0 - 0 - 1</span>
-							<p>div</p>
-						</div>
-					</a>
-				</div><!-- frame -->
-			</div><!-- box -->
-			<div class="box">
-				<div class="frame">
-					<a href="#">
-						<div class="img">
-							<img src="/web/20220318101613im_/https://cssspecificity.com/images/img-04.svg" alt="">
-							<div class="ttl">
-								<ul>
-									<li>2 elements</li>
-								</ul>
-							</div>
-							<div class="mask"></div>
-						</div>
-						<div class="desc">
-							<span class="value">0 - 0 - 2</span>
-							<p>li &#62; ul</p>
-						</div>
-					</a>
-				</div><!-- frame -->
-			</div><!-- box -->
-			<div class="box">
-				<div class="frame">
-					<a href="#">
-						<div class="img">
-							<img src="/web/20220318101613im_/https://cssspecificity.com/images/img-05.svg" alt="">
-							<div class="ttl">
-								<ul>
-									<li>9 elements</li>
-								</ul>
-							</div>
-							<div class="mask"></div>
-						</div>
-						<div class="desc">
-							<span class="value">0 - 0 - 9</span>
-							<p>body div ... ul li p a</p>
-						</div>
-					</a>
-				</div><!-- frame -->
-			</div><!-- box -->
 			<div class="box">
 				<div class="frame">
 					<a href="#">
