Nofollow that dead link.

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			<p>The origin and sorting order of CSS helps browsers to determine which rules win out over others. When one of those methods completely fails, there is a conflict as to which CSS rule should be applied.
 			<p>CSS has in place a way to deal with those conflicts: the specificity of the CSS selector. The higher the specificity of a CSS selector, the greater the likelihood its declarations are used over another CSS rule's declarations.
 			<br>
-			<p>This reference was formerly hosted at <a href="https://cssspecificity.com/">cssspecificty.com</a>, which went offline long ago. This was Alice's favourite reference for this, so she's restored the content, modernized it according to her taste in HTML, and made it available under <a href="https://specificity.webcore.io">specificity.webcore.io</a>. Links to relevant <a href=https://developer.mozilla.org target=_blank>Mozilla Developer Network</a> pages have also been added.
+			<p>This reference was formerly hosted at <a href=https://cssspecificity.com/ rel=nofollow>cssspecificty.com</a>, which went offline long ago. This was Alice's favourite reference for this, so she's restored the content, modernized it according to her taste in HTML, and made it available under <a href="https://specificity.webcore.io">specificity.webcore.io</a>. Links to relevant <a href=https://developer.mozilla.org target=_blank>Mozilla Developer Network</a> pages have also been added.
 		</section>
 		<section id=legend>
 			<h3>Legend</h3>
