--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	#selectors figure { flex 0 0; }
 	#selectors h3 { display: inline-block; font-size: 11px; margin: 0 calc(-1ex + 2px); background-color: #cbc9c7; padding: 3px 5px; box-shadow: -1px -1px 0 white, -2px -2px 0 #d0cecd; }
 	
-	figure { width: 19vw; min-width: 200px; max-width: 200px; position: relative; margin: 0 2vw calc(15px + 1em); padding: 0; }
+	figure { width: 19vw; min-width: 200px; max-width: 250px; position: relative; margin: 0 2vw calc(15px + 1em); padding: 0; }
 	figure img { border: 1px solid black; }
 	figure figcaption { position: absolute; left: -4px; top: -4px; padding: 5px; background: black; color: white; font-size: 12px; font-weight: bold; box-shadow: -1px -1px 0 white, -2px -2px 0 black; line-height: 1; }
 	figure figcaption.multiline { top: -12px; }
@@ -150,6 +150,34 @@
 			<samp>0–1–2</samp>
 		</figure>
 		
+		<figure>
+			<img src=img/element-class-pseudo.svg alt="1 element, 1 class, 1 pseudo-class">
+			<figcaption class=multiline>1 element<br>1 class<br>1 pseudo-class</figcaption>
+			<samp></samp>
+			<samp>0–2–1</samp>
+		</figure>
+		
+		<figure>
+			<img src=img/element-class-attribute.svg alt="1 element, 1 class, 1 attribute">
+			<figcaption class=multiline>1 element<br>1 class<br>1 attribute</figcaption>
+			<samp></samp>
+			<samp>0–2–1</samp>
+		</figure>
+		
+		<figure>
+			<img src=img/many.svg alt="10 classes / attribute pseudo-classes">
+			<figcaption class=multiline>10 classes /<br>attribute pseudo-classes</figcaption>
+			<samp>.cl:focus .chk[type]…</samp>
+			<samp>0–10–0</samp>
+		</figure>
+		
+		<figure>
+			<img src=img/id.svg alt="1 ID selector">
+			<figcaption>1 ID selector</figcaption>
+			<samp>#colophon</samp>
+			<samp>1–0–0</samp>
+		</figure>
+		
 		
 		
 		<figure hidden>
@@ -211,164 +239,6 @@
 
 <article hidden>
 		<div class="container">
-			<div class="box">
-				<div class="frame">
-					<a href="#">
-						<div class="img">
-							<img src="/web/20220318101613im_/https://cssspecificity.com/images/img-06.svg" alt="">
-							<div class="ttl">
-								<ul>
-									<li>1 class</li>
-								</ul>
-							</div>
-							<div class="mask"></div>
-						</div>
-						<div class="desc">
-							<span class="value">0 - 1 - 0</span>
-							<p>.myclass</p>
-						</div>
-					</a>
-				</div><!-- frame -->
-			</div><!-- box -->
-			<div class="box">
-				<div class="frame">
-					<a href="#">
-						<div class="img">
-							<img src="/web/20220318101613im_/https://cssspecificity.com/images/img-07.svg" alt="">
-							<div class="ttl ttl-2">
-								<ul>
-									<li>1 universal selector</li>
-									<li>1 class</li>
-								</ul>
-							</div>
-							<div class="mask"></div>
-						</div>
-						<div class="desc">
-							<span class="value">0 - 1 - 0</span>
-							<p>*.myclass</p>
-						</div>
-					</a>
-				</div><!-- frame -->
-			</div><!-- box -->
-			<div class="box">
-				<div class="frame">
-					<a href="#">
-						<div class="img">
-							<img src="/web/20220318101613im_/https://cssspecificity.com/images/img-07b.svg" alt="">
-							<div class="ttl ttl-2">
-								<ul>
-									<li>1 universal selector</li>
-									<li>1 attribute selector</li>
-								</ul>
-							</div>
-							<div class="mask"></div>
-						</div>
-						<div class="desc">
-							<span class="value">0 - 1 - 0</span>
-							<p>*[type:checkbox]</p>
-						</div>
-					</a>
-				</div><!-- frame -->
-			</div><!-- box -->
-			<div class="box">
-				<div class="frame">
-					<a href="#">
-						<div class="img">
-							<img src="/web/20220318101613im_/https://cssspecificity.com/images/img-08.svg" alt="">
-							<div class="ttl">
-								<ul>
-									<li>1 pseudo-class</li>
-								</ul>
-							</div>
-							<div class="mask"></div>
-						</div>
-						<div class="desc">
-							<span class="value">0 - 1 - 0</span>
-							<p>:only-of-type</p>
-						</div>
-					</a>
-				</div><!-- frame -->
-			</div><!-- box -->
-			<div class="box">
-				<div class="frame">
-					<a href="#">
-						<div class="img">
-							<img src="/web/20220318101613im_/https://cssspecificity.com/images/img-09.svg" alt="">
-							<div class="ttl ttl-2">
-								<ul>
-									<li>1 element</li>
-									<li>1 class</li>
-								</ul>
-							</div>
-							<div class="mask"></div>
-						</div>
-						<div class="desc">
-							<span class="value">0 - 1 - 1</span>
-							<p>li.myclass</p>
-						</div>
-					</a>
-				</div><!-- frame -->
-			</div><!-- box -->
-			<div class="box">
-				<div class="frame">
-					<a href="#">
-						<div class="img">
-							<img src="/web/20220318101613im_/https://cssspecificity.com/images/img-10.svg" alt="">
-							<div class="ttl ttl-2">
-								<ul>
-									<li>1 element</li>
-									<li>1 attribute</li>
-								</ul>
-							</div>
-							<div class="mask"></div>
-						</div>
-						<div class="desc">
-							<span class="value">0 - 1 - 1</span>
-							<p>li[attr]</p>
-						</div>
-					</a>
-				</div><!-- frame -->
-			</div><!-- box -->
-			<div class="box">
-				<div class="frame">
-					<a href="#">
-						<div class="img">
-							<img src="/web/20220318101613im_/https://cssspecificity.com/images/img-11.svg" alt="">
-							<div class="ttl ttl-2">
-								<ul>
-									<li>2 elements</li>
-									<li>1 pseudo-class</li>
-								</ul>
-							</div>
-							<div class="mask"></div>
-						</div>
-						<div class="desc">
-							<span class="value">0 - 1 - 2</span>
-							<p>li:nth-of-type(3n)~li</p>
-						</div>
-					</a>
-				</div><!-- frame -->
-			</div><!-- box -->
-			<div class="box">
-				<div class="frame">
-					<a href="#">
-						<div class="img">
-							<img src="/web/20220318101613im_/https://cssspecificity.com/images/img-12.svg" alt="">
-							<div class="ttl ttl-2">
-								<ul>
-									<li>2 elements</li>
-									<li>1 attribute</li>
-								</ul>
-							</div>
-							<div class="mask"></div>
-						</div>
-						<div class="desc">
-							<span class="value">0 - 1 - 2</span>
-							<p>form input[type=email]</p>
-						</div>
-					</a>
-				</div><!-- frame -->
-			</div><!-- box -->
 			<div class="box">
 				<div class="frame">
 					<a href="#">
