More form-fitting example.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 		<figure>
 			<img src=img/element-class-pseudo.svg alt="1 element, 1 class, 1 pseudo-class">
 			<figcaption class=multiline>1 element<br>1 class<br>1 pseudo-class</figcaption>
-			<samp></samp>
+			<samp>li.class:focus</samp>
 			<samp>0–2–1</samp>
 		</figure>
 		
