--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 		<figure>
 			<img src=img/element-class-attribute.svg alt="1 element, 1 class, 1 attribute">
 			<figcaption class=multiline>1 element<br>1 class<br>1 attribute</figcaption>
-			<samp></samp>
+			<samp>input[type]:not(.class)</samp>
 			<samp>0–2–1</samp>
 		</figure>
 		
