--- a/index.html
+++ b/index.html
@@ -178,13 +178,32 @@
 			<samp>1–0–0</samp>
 		</figure>
 		
+		<figure>
+			<img src=img/complex.svg alt="2 types, 2 class / attribute, 1 ID selector">
+			<figcaption class=multiline>2 types<br>2 class / attribute<br>1 ID selector</figcaption>
+			<samp>#elem li.class a[href]</samp>
+			<samp>1–2–2</samp>
+		</figure>
 		
+		<figure>
+			<img src=img/ids-type.svg alt="2 ID selectors, 1 type selector">
+			<figcaption class=multiline>2 ID selectors<br>1 type selector</figcaption>
+			<samp>#divitis #myDiv a</samp>
+			<samp>2–0–1</samp>
+		</figure>
 		
-		<figure hidden>
-			<img src=img/.svg alt="">
-			<figcaption></figcaption>
-			<samp></samp>
-			<samp>0–0–0</samp>
+		<figure>
+			<img src=img/inline.svg alt="inline styles are generally bad">
+			<figcaption>inline style</figcaption>
+			<samp>style="…"</samp>
+			<samp>1–0–0–0</samp>
+		</figure>
+		
+		<figure>
+			<img src=img/axe-murder.svg alt="!important is axe murder">
+			<figcaption>!important</figcaption>
+			<samp>!important</samp>
+			<samp>1–0–0–0–0</samp>
 		</figure>
 	</section>
 	
