--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		h1 a { color: #ddd; }
 		h1 a:hover, h1 a:focus { color: white; }
 		h3 { background-color: black; box-shadow: -1px -1px 0 #333, -2px -2px 0 black; }
+		hr::after { opacity: 0.75; filter: invert; }
 	}
 </style>
 
