Remove ineffective negative margins.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	#selectors h3 { display: inline-block; font-size: 11px; margin: 0 calc(-1ex + 2px); background-color: #cbc9c7; padding: 3px 5px; box-shadow: -1px -1px 0 white, -2px -2px 0 #d0cecd; }
 	
 	figure { width: 19vw; min-width: 200px; max-width: 250px; position: relative; margin: 0 2vw calc(15px + 1em); padding: 0; }
-	figure img { border: 1px solid black; }
+	figure img { border: 1px solid black; margin-left: -2px; margin-top: -2px; }
 	figure figcaption { position: absolute; left: -4px; top: -4px; padding: 5px; background: black; color: white; font-size: 12px; font-weight: bold; box-shadow: -1px -1px 0 white, -2px -2px 0 black; line-height: 1; }
 	figure figcaption.multiline { top: -12px; }
 	figure samp { font-size: 11px; float: left; }
